src/components/ResumeButton/ResumeButton.scss
.resume-button{
    border-radius: 12px;
    font-family: 'Times New Roman', Times, serif;
    font-size: 16px;
    padding: 12px 18px 12px 12px;
    position: fixed;
    bottom: 41px;
    left: 18px;
    display: flex;
    align-items: center;
    gap: 8px;
    box-shadow: 0px 3px 7px rgba( 0, 0, 0, 0.2);
    transition: 0.3s all;
    max-width: 1600px;
    max-height: 43px;
    z-index: 2;
    cursor: pointer;

    
    h4 {
        margin-bottom: 1px;
        font-family: 'Times New Roman', Times, serif;
        font-weight: 500;
        letter-spacing: -0.03em;
        transition: 0.2s all;
        
    }
}

.icon {
    color: black;
    // transition: color 0.3s ease;
  }
  
  .icon-hover {
    color: #fff;
  }

